--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li.active-page {
     font-family: 'DM Sans', sans-serif;
     font-family: 'Sintony', sans-serif;
     font-family: 'Sora', sans-serif;
-    font-weight: 600;
+    font-weight: bold;
     animation: navAnimation ease 0.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -635,15 +635,14 @@ ol.carousel-indicators li.active {
     width: 100%;
     height: 500px;
     background-color: #fff;
-    border-top: 2px solid #ddd;
+    /* border-top: 5px solid red; */
 }
 
   /* bottom section */
 .bottom-section {
     background-color: rgb(184, 16, 16);
       /* height: 50px; */
-    padding: 20px;
-    border-top: 1px solid rgb(75, 0, 0);
+    padding: 20px;    
   }
 
 
@@ -653,10 +652,63 @@ ol.carousel-indicators li.active {
     font-family: 'DM Sans', sans-serif;
     font-family: 'Sintony', sans-serif;
     font-family: 'Sora', sans-serif;
+    height: 400px;
+    padding-top: 50px;
 }
 
+.bottom-divider-line {
+    width: 100%;
+    height: 1px;
+    background-color: rgb(253, 119, 119);
+}
 
+nav {
+    font-size: 1.4rem;
+    font-weight: bold;
+}
 
+/* Flex Container */
+.bottom-nav nav ul {
+    width: 50%;
+    left: 50%;
+    transform: translateX(50%);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    white-space: nowrap;
+}
+
+.bottom-nav nav ul li {
+    cursor: pointer;
+    padding: 0.5rem;
+    padding-bottom: 30px;
+    flex: auto;
+    text-align: center;
+    background: 
+    linear-gradient(currentColor 0 0) 
+    0 100% /var(--d, 0) 3px 
+    no-repeat;
+    transition:0.25s;
+}
+
+nav ul li:hover {
+    --d: 100%;
+}
+
+/* Responsive Nav Bar */
+@media all and (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+    }
+    nav ul li {
+        text-align: center;
+    }
+    nav ul li:hover {
+        padding-bottom: 5px;
+        margin-bottom: 20px;
+    }
+}
 /* middle section */
 .container-fluid.middle-section-background {
     background-color: #ebebeb;
