--- a/style.css
+++ b/style.css
@@ -189,8 +189,14 @@ li.active-page {
     font-family: 'DM Sans', sans-serif;
     font-family: 'Sintony', sans-serif;
     font-family: 'Sora', sans-serif;
-    font-size: 3.3vw;
+    font-size: 3.2vw;
     font-weight: 600;
+}
+
+@media screen and (min-width: 2000px) {
+    .main-desc {
+        font-size: 65px;
+    }
 }
 
 .main-desc .main-desc-1 {
@@ -229,6 +235,13 @@ li.active-page {
     left: 47%;
     transform: translate(-50%, 53%) rotateZ(0deg);
   }
+
+@media screen and (min-width: 2000px) {
+    .arrow-container {
+        top: 130%;
+    }
+}
+
   .arrow-container:hover {
     cursor: pointer;
   }
@@ -256,7 +269,8 @@ li.active-page {
     transform-origin: bottom right;
     background: #fff;
     width: 0.2vw;
-    height: 4vw;
+    height: 3.5vw;
+    max-height: 60px;
     border-radius: 10px;
     transform: translate(-50%, -50%) rotateZ(-45deg);
   }
@@ -315,7 +329,7 @@ li.active-page {
     .navbar-brand {
         position: absolute;
         background: url(images/version_1.png);
-        width: 36px;
+        width: 42px;
         height: 42px;
         background-size: cover;
         background-repeat: no-repeat;
@@ -601,8 +615,10 @@ li.active-page {
 
 .carousel-inner {
     cursor: context-menu;
-    /* max-height: 1000px; */
+    max-height: 1000px;
 }
+
+
 
 /* carousal indicators style */
 ol.carousel-indicators {
@@ -633,10 +649,141 @@ ol.carousel-indicators li.active {
 /* sponsors section */
 .sponsors {
     width: 100%;
-    height: 500px;
+    height: 100%;
     background-color: #fff;
-    /* border-top: 5px solid red; */
+    padding: 50px 0px 50px 0px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+/* 
+.customer-logos {
+
+    background-color: rgb(29, 112, 29);
+  } */
+  
+  /* Slider */
+  .slick-slide {
+      margin: 0px 20px;
+  }
+  
+  .slick-slide img {
+      width: 100%;
+  }
+  
+  .slick-slider
+  {
+      position: relative;
+      display: block;
+      box-sizing: border-box;
+  
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+  
+      -webkit-touch-callout: none;
+      -khtml-user-select: none;
+      -ms-touch-action: pan-y;
+          touch-action: pan-y;
+      -webkit-tap-highlight-color: transparent;
+  }
+  
+  .slick-list
+  {
+      position: relative;
+      display: block;
+      overflow: hidden;
+  
+      margin: 0;
+      padding: 0;
+  }
+  .slick-list:focus
+  {
+      outline: none;
+  }
+  .slick-list.dragging
+  {
+      cursor: pointer;
+      cursor: hand;
+  }
+  
+  .slick-slider .slick-track,
+  .slick-slider .slick-list
+  {
+      -webkit-transform: translate3d(0, 0, 0);
+         -moz-transform: translate3d(0, 0, 0);
+          -ms-transform: translate3d(0, 0, 0);
+           -o-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+  }
+  
+  .slick-track
+  {
+      position: relative;
+      top: 0;
+      left: 0;
+  
+      display: block;
+  }
+  .slick-track:before,
+  .slick-track:after
+  {
+      display: table;
+  
+      content: '';
+  }
+  .slick-track:after
+  {
+      clear: both;
+  }
+  .slick-loading .slick-track
+  {
+      visibility: hidden;
+  }
+  
+  .slick-slide
+  {
+      display: none;
+      float: left;
+  
+      height: 100%;
+      min-height: 1px;
+  }
+  [dir='rtl'] .slick-slide
+  {
+      float: right;
+  }
+  .slick-slide img
+  {
+      display: block;
+  }
+  .slick-slide.slick-loading img
+  {
+      display: none;
+  }
+  .slick-slide.dragging img
+  {
+      pointer-events: none;
+  }
+  .slick-initialized .slick-slide
+  {
+      display: block;
+  }
+  .slick-loading .slick-slide
+  {
+      visibility: hidden;
+  }
+  .slick-vertical .slick-slide
+  {
+      display: block;
+  
+      height: auto;
+  
+      border: 1px solid transparent;
+  }
+  .slick-arrow.slick-hidden {
+      display: none;
+  }
+
 
   /* bottom section */
 .bottom-section {
@@ -778,8 +925,13 @@ nav ul li:hover {
         margin-top: -7vw;
         padding-top: 1.7%;
         text-align: center;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-      
+    
+.result-section a:hover {
+    text-decoration: none;
+}
+
 .result-images {
     width: 100%;
     height: 300px;
@@ -1002,6 +1154,7 @@ nav ul li:hover {
     /* height: 500px; */
     padding-bottom: 50px;
     padding-top: 20px;
+    
 }
 
 .next-match-wrap {
@@ -1011,6 +1164,7 @@ nav ul li:hover {
     margin-top: -23px;
     padding-top: 30px;
     padding-bottom: 30px;
+    
 }
 
 
@@ -1026,6 +1180,7 @@ nav ul li:hover {
     margin-left: 30px;
     margin-right: 30px;
     background-color: #fff;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 
@@ -1127,11 +1282,9 @@ nav ul li:hover {
 
 .next-match-all:hover {
     text-decoration: none;
-    color: rgb(13,12,181);
 }
 
 /* End of styles used mainly in index.html file */
-
 
 
 /* Style for teames pages */
@@ -1142,6 +1295,8 @@ nav ul li:hover {
     background-position: center;
     width: 100%;
     height: 400px;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+
 }
 
 @media screen and (max-width: 768px) {
@@ -1181,9 +1336,10 @@ nav ul li:hover {
     background-color: #fff;
     height: 100%;
     margin-top: -130px;
-    margin-bottom: 40px;
+    margin-bottom: 70px;
     margin-left: -20px;
     position: relative;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1290,11 +1446,21 @@ nav ul li:hover {
     font-family: 'Sora', sans-serif;
     border-bottom: 2px solid rgb(13,12,181);
     background: 
-    linear-gradient(currentColor 0 0) 
+    linear-gradient(rgb(13,12,181) 0 0) 
     0 100% /var(--d, 0) 4px 
     no-repeat;
     transition:0.25s;
 }
+
+.active-page-tablink {
+    background: 
+    linear-gradient(rgb(13,12,181) 0 0) 
+    0 100% /var(--d, 0) 4px 
+    no-repeat;
+    transition:0.25s;
+    --d: 100%;
+}
+
 
 
 @media screen and (max-width: 768px) {
@@ -1338,3 +1504,4 @@ nav ul li:hover {
         margin: 0 auto;
     }
 }
+
