--- a/style.css
+++ b/style.css
@@ -1507,3 +1507,121 @@ nav ul li:hover {
     }
 }
 
+/* contact  */
+.contact-content {
+    width: 100%;
+    height: auto;
+    background-color: #ebebeb;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.contact-form {
+    width: 100%;
+    height: 400px;
+    background-color: #fff;
+    margin-top: 40px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    padding-bottom:40%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 30px;
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Sintony', sans-serif;
+    font-family: 'Sora', sans-serif;
+  }
+  
+  .flex-item-left {
+    padding: 20px;
+    flex: 45%;
+    text-align: left;
+    background-color: #fff;
+    margin-right: 30px;
+    /* border-radius: 20px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
+  
+  .flex-item-right {
+    padding: 20px;
+    flex: 45%;
+    text-align: left;
+    background-color: #fff;
+    /* border-radius: 20px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+  }
+
+  .flex-container h3 { 
+    color: rgb(0, 0, 75);
+    font-size: 23px;
+    font-weight: 700;
+  }
+
+  .flex-container h4 { 
+    color:rgb(32, 32, 32);
+    font-weight: 500;
+    /* color:rgb(91, 91, 99); */
+    font-size: 16px;
+  }
+
+  .flex-container h5 { 
+    color:rgb(13,12,181);
+    font-weight: 700;
+    /* color:rgb(91, 91, 99); */
+    font-size: 19px;
+  }
+
+
+
+  .contact-divider { 
+    width: 100%;
+    height: 2px;
+    background-color: rgb(0, 0, 75);
+    margin-bottom: 5px;
+  } 
+  
+  /* Responsive layout - makes a one column-layout instead of a two-column layout */
+  @media (max-width: 800px) {
+    .flex-item-left {
+      margin-right: 0px;
+      margin-bottom: 20px;
+    }
+
+    .flex-item-right {
+        margin-bottom: -10px;
+      }
+
+    .flex-container h3 { 
+        font-size: 18px;
+      }
+    
+      .flex-container h4 { 
+        font-size: 12px;
+      }
+
+      .flex-container h5 { 
+        font-size: 17px;
+      }
+  }
+
